# chess_qt

./: .gitignore  CMakeLists.txt  README.md  main.cpp
chess_logic/: Board.cpp  Board.h  CMakeLists.txt  Figure.cpp  Figure.h  FigureFactory.cpp  FigureFactory.h  Path.cpp  Path.h  Structures.h  a.cpp  a.h
chess_logic/figures/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
resources/: all.qrc
view_qt/: CMakeLists.txt  ChessView.cpp  ChessView.h  LConfirm.cpp  LConfirm.h  LConst.h  LDesk.cpp  LDesk.h  LLoadGame.cpp  LLoadGame.h  LMain.cpp  LMain.h  LOptions.cpp  LOptions.h  LSaveGame.cpp  LSaveGame.h  main.cpp  resources.qrc
